# lightignore

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  lignore.json
.github/workflows/: release.yml
src/: app.rs  cli.rs  config.rs  gitignore.rs  main.rs  self_updater.rs  template.rs  validation.rs
src/ui/: display.rs  mod.rs  selection.rs  theme.rs
