[package]
name = "lightignore"
version = "0.2.1"
edition = "2024"
authors = ["kmizuki"]
license = "MIT"
description = "Interactive gitignore generator with beautiful TUI"
repository = "https://github.com/kmizuki/lightignore"
homepage = "https://github.com/kmizuki/lightignore"
readme = "README.md"
keywords = ["gitignore", "git", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lignore"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
flate2 = "1"
futures = "0.3"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
xz2 = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
